--- a/api-list-app/package.json
+++ b/api-list-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "click-counter-app",
+  "name": "api-list-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
