--- a/express-postgres-user-api/package.json
+++ b/express-postgres-user-api/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "express-crud-api",
+  "name": "express-postgres-user-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   }
 }
