Expand env examples and update setup docs

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
+# Base URL of the backend server
 REACT_APP_API_URL=http://localhost:5000
+
+# TMDB API key for frontend requests
 REACT_APP_TMDB_KEY=
