--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
