ci: pass YouTube key to Vercel

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -71,4 +71,5 @@ jobs:
           prod: true
           env: |
             VITE_API_URL=${{ secrets.VITE_API_URL }}
+            VITE_YT_API_KEY=${{ secrets.VITE_YT_API_KEY }}
 
